reaarange orcid components

--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -2,9 +2,10 @@
   id: 'vue',
   data: {
     user: @user.as_json,
+    orcid_oauth_url: orcid_oauth_url
   } do %>
-  <h1>Link your ORCiD account</h1>
-  <orcid-button />
+  <h1>Manage Your UVA ORCID iD Connection</h1>
+  <orcid-dashboard />
 <%end%>
 
 
