--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -1,7 +1,7 @@
 <%= content_tag :div,
   id: 'vue',
   data: {
-    user: @user.as_json,
+    user: current_user.as_json,
     orcid_oauth_url: orcid_oauth_url
   } do %>
   <h1>Manage Your UVA ORCID iD Connection</h1>
