remove-orcid-button with styling

--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -2,7 +2,8 @@
   id: 'vue',
   data: {
     user: current_user.as_json,
-    orcid_oauth_url: orcid_oauth_url
+    orcid_oauth_url: orcid_oauth_url,
+    orcid_removal_path: orcid_path
   } do %>
   <h1>Manage Your UVA ORCID iD Connection</h1>
   <orcid-dashboard />
