--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,17 @@
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= javascript_pack_tag 'application' %>
     <%= javascript_pack_tag 'orcid_vue' %>
+    <link rel='import' href='https://www.library.virginia.edu/bower_components/uvalib-header/uvalib-header.html'>
+    <link rel='import' href='https://www.library.virginia.edu/bower_components/uvalib-footer/uvalib-footer.html'>
+
   </head>
 
   <body>
-    <div class="container">
-    <%= yield %>
+    <uvalib-header>
+    </uvalib-header>
+    <div class="container" style="margin: 10rem 0;" >
+      <%= yield %>
+    </div>
+    <uvalib-footer />
   </body>
 </html>
