--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -3,7 +3,8 @@
   data: {
     user: current_user.as_json,
     orcid_oauth_url: orcid_oauth_url,
-    orcid_removal_path: orcid_path
+    orcid_removal_path: orcid_path,
+    flash: flash.to_h
   } do %>
   <h1>Manage Your UVA ORCID iD Connection</h1>
   <orcid-dashboard />
