new web component script

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,8 @@
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= javascript_pack_tag 'application' %>
     <%= javascript_pack_tag 'orcid_vue' %>
-    <link rel='import' href='https://www.library.virginia.edu/bower_components/uvalib-theme/uvalib-theme.html' />
-    <link rel='import' href='https://www.library.virginia.edu/bower_components/uvalib-header/uvalib-header.html' />
-    <link rel='import' href='https://www.library.virginia.edu/bower_components/uvalib-footer/uvalib-footer.html' />
+
+    <script src="https://static.lib.virginia.edu/js/controllers/page-components-min.js"></script>
 
   </head>
 
